수정: #297 통일성을 위한 일부 기능 분리 및 수정
수정: service 에서 domain 를 반환하는 기능 제거 또는 private 전환
수정: ApiController 에 try-catch AOP 적용
수정: 일부 dto 에서 primary key 를 id field 로 추가 (Dto 통신만을 위한 조건)
수정: teamApiController 에서 Member join, out 를 MemberApiController 로 이전
수정: teamService 에서 Member join, out 기능을 MemberService 로 이전
수정: Entity 를 외부 서비스에서 받아오는 모든 기능 수정
수정: member join out 를 사용하는 ajax 수정
수정: Aop try-catch 에 log 추가
삭제: TeamMemberDto 삭제 및 MemberDto 로 대체
수정: Title 및 빠진 html tag 에서 빠진 attr 추가
수정: di 구성 constructor 로 교체 및 필드 final 화
수정: 일부 stream, optional 단축 또는 추가

--- a/src/main/resources/templates/fragment/team_viewer_modal.html
+++ b/src/main/resources/templates/fragment/team_viewer_modal.html
@@ -305,7 +305,10 @@
             $.ajax({
                     type: tv_ajax_req_info.type,
                     url: tv_ajax_req_info.url,
-                    data: null,
+                    data: JSON.stringify({
+                        teamId: tv_team.teamId,
+                        role: "MENTEE"
+                    }),
                     dataType: "JSON",
                     contentType: 'application/json',
                     success: (data) => {
