--- a/src/main/resources/templates/layout/default_layout.html
+++ b/src/main/resources/templates/layout/default_layout.html
@@ -1,4 +1,5 @@
-<html xmlns:th="http://www.thymeleaf.org"
+<html th:lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <!-- common title setting-->
