--- a/src/main/resources/templates/mentee.html
+++ b/src/main/resources/templates/mentee.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout/default_layout.html" th:with="currentPage='mentee'">
 <head>
-    <title>시간 설정</title>
+    <title>Mentee</title>
     <!-- Plugin CSS file with desired skin -->
     <th:block layout:fragment="custom-head">
         <!-- Plugin CSS file with desired ski n-->
