--- a/src/main/resources/templates/list_myteam.html
+++ b/src/main/resources/templates/list_myteam.html
@@ -4,6 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout/default_layout.html" th:with="currentPage='list_team'">
 <head>
+    <title>My Team</title>
     <th:block layout:fragment="custom-head">
         <!-- Plugin CSS file with desired ski n-->
         <link rel="stylesheet"
@@ -168,7 +169,7 @@
                 team: team,
                 mode: "READONLY_OUT",
                 ajax_req_info: {
-                    url: './api/v1/team/' + team.teamId + '/out',
+                    url: './api/v1/member',
                     type: 'DELETE',
                     success_message: '해당 팀에서 탈퇴했습니다.',
                     success: function () {
