--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -4,6 +4,12 @@
     line-height: 100px;
 }
 
+.square-m {
+    height: 70px;
+    width: 70px;
+    line-height: 70px;
+}
+
 .img-rounded {
     border-radius: 50%;
 }
