추가: #293 revoke 404 에러 수정
수정: revoke 요청 url 오타 수정

--- a/src/main/resources/templates/fragment/team_viewer_modal.html
+++ b/src/main/resources/templates/fragment/team_viewer_modal.html
@@ -386,7 +386,7 @@
         function submit_viewer_team_revoke() {
             let ajax_req_info = {
                 type: 'POST',
-                url: './api/v1/team',
+                url: './api/v1/team/' + tv_team.teamId + '/revoke',
                 success: function () {
                     window.location.href = '/'
                 },
