개선: #314 frontend 에서 update review 요청 시 405 error 해결
수정: review_team_submit 함수에서 update url 의 수정
url 경로설정 미스로 인해 생긴 버그

--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -82,7 +82,7 @@
                 time: document.getElementById('review_input_time').value,
                 interested: document.getElementById('review_input_interested').value,
             }
-            fetch('/api/v1/team/review', {
+            fetch('/api/v1/review', {
                 method: 'POST',
                 headers: {
                     "Content-Type": "application/json",
