--- a/src/main/resources/templates/fragment/team_create_modal.html
+++ b/src/main/resources/templates/fragment/team_create_modal.html
@@ -68,7 +68,7 @@
                                 <input id="tc_input_datepicker" class="form-control" autocomplete="off"
                                        pattern="^(19|20)\d{2}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[0-1])$"
                                        required/>
-                                <div class="invalid-feedback">날짜는 "yyyy-mm-dd" 형식으로 입력해주세요.</div>
+                                <div class="invalid-feedback">시간이 중복됩니다. 확인 바랍니다.</div>
                             </div>
                         </div>
                     </div>
