Add : Admin 페이지 및 통계 테스트 페이지 생성
Admin 페이지 생성 및 Team 통계에 대한 테스트 페이지를 제작
차후 admin page 용 header 제작 필요

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -43,6 +43,10 @@
                 <a href="/list_team" class="nav-link"
                    th:classappend="${currentPage} == 'list_team' ? 'active' : '' ">팀 목록</a>
             </li>
+            <li th:if="${user != null && user.role.name == 'ADMIN'}">
+                <a href="/admin/index" class="nav-link"
+                   th:classappend="${currentPage} == 'admin' ? 'active' : '' ">관리자</a>
+            </li>
         </ul>
     </header>
 
