resolve #351 : 멘토 리뷰 기능 추가 및 front 안전장치 추가
edit : ReviewService, 이제 멘토가 팀을 종료시 멘토에게도 리뷰를 작성하게 변경되었습니다.
edit : TeamInnerService, 이제 review 체크 범위를 멘토까지 확장시킵니다.
edit : team_review_modal, Review를 한번이라도 작성하면 이제 더이상 리뷰작성 버튼이 활성화 되지 않습니다.
edit : Review 작성 시 상세내역을 최소 10글자 이상을 서술해야 합니다.
edit : 팀 종료 시 알람창으로 한번 더 채크합니다.

--- a/src/main/resources/templates/close_team.html
+++ b/src/main/resources/templates/close_team.html
@@ -78,6 +78,11 @@
         }
 
         function close_team_submit(event) {
+            let confirm_answer = confirm("팀을 종료하겠습니까?");
+            if (!confirm_answer) {
+                event.preventDefault();
+                return;
+            }
             const m = document.getElementsByClassName('member');
             let members = [];
             const team_id = document.getElementById('close_team_input_team_id').value;
