add #349 : 정산(Settle) 페이지 추가
add : Settle 페이지 추가
add : Settle 추가 기능 설계

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/default_layout.html" th:with="currentPage='mentor_review'">
+      layout:decorator="layout/default_layout_admin.html" th:with="currentPage='mentor_review'">
 <head>
     <meta charset="UTF-8">
     <title>Admin Page</title>
